2004-05-31  Release Manager

	* GCC 3.3.4 Released.

2004-02-09  Alan Modra  <amodra@bigpond.net.au>

	* src/types.c (pointer): POWERPC64 has 8 byte pointers.

2004-02-14  Release Manager

	* GCC 3.3.3 Released.

2003-10-16  Release Manager

	* GCC 3.3.2 Released.

2003-09-09  Alan Modra  <amodra@bigpond.net.au>

	* configure: Regenerate.

2003-08-08  Kean Johnston  <jkj@sco.com>

	* configure.in: Add support for sco3.2v5.0*
	* configure: Regenerated

2003-08-04  Release Manager

	* GCC 3.3.1 Released.

2003-07-11  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>

	* README: Note that libffi is not part of GCC.  Update the project
	URL and status.

2003-06-19  Franz Sirl  <Franz.Sirl-kernel@lauterbach.com>

	* src/powerpc/ppc_closure.S: Include ffi.h.
	(ffi_closure_SYSV): Make it hidden.
	* src/powerpc/sysv.S (ffi_call_SYSV): Make it hidden.
	* src/powerpc/ffi.c (ffi_closure_SYSV): Declare hidden.
	(ffi_call_SYSV): Likewise.
	(ffi_prep_args_SYSV): Make it hidden.
	(ffi_closure_helper_SYSV): Likewise.

2003-06-06  Jakub Jelinek  <jakub@redhat.com>

	* configure: Rebuilt.

2003-05-16  Jakub Jelinek  <jakub@redhat.com>

	* configure.in (HAVE_RO_EH_FRAME): Check whether .eh_frame section
	should be read-only.
	* configure: Rebuilt.
	* fficonfig.h.in: Rebuilt.
	* include/ffi.h.in (EH_FRAME_FLAGS): Define.
	* src/alpha/osf.S: Use EH_FRAME_FLAGS.
	* src/powerpc/linux64.S: Likewise.
	* src/powerpc/linux64_closure.S: Likewise.  Include ffi.h.
	* src/powerpc/sysv.S: Use EH_FRAME_FLAGS.  Use pcrel encoding
	if -fpic/-fPIC/-mrelocatable.
	* src/powerpc/powerpc_closure.S: Likewise.
	* src/sparc/v8.S: If HAVE_RO_EH_FRAME is defined, don't include
	#write in .eh_frame flags.
	* src/sparc/v9.S: Likewise.
	* src/x86/unix64.S: Use EH_FRAME_FLAGS.
	* src/x86/sysv.S: Likewise.  Use pcrel encoding if -fpic/-fPIC.
	* src/s390/sysv.S: Use EH_FRAME_FLAGS.  Include ffi.h.

2003-04-18  Jakub Jelinek  <jakub@redhat.com>

	* include/ffi.h.in (POWERPC64): Define if 64-bit.